--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!doctype txt>
 <html>
   <head>
-    <title>MESSINA</title>
+    <title>About Messina</title>
       <h2>Statement of Fashion</h2>
-      <nav> 
-  	    <ul> 
-  		  <li> <a href="">WOMEN'S</a></li>
+      <nav> <h2>Site Navigation</h2>
+        <ul> 
+          <li> <a href="">WOMEN'S</a></li>
           <li> <a href="">BATH</a></li>
           <li> <a href="">MEN'S</a></li>
           <li> <a href="">KITCHEN</a></li>
@@ -14,7 +14,7 @@
   </head>
 <body>
   <section>
-  	<h1>Heading</h1>
+          <h2>Heading</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
       <p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
     <h2>Heading</h2>
@@ -22,35 +22,39 @@
  sed do eiusmod.</p>
       <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
   </section>
-  <aside>
-  	<search bar></search bar>
-  	    <h1>About Messina</h1>
+  <div>
+          
+          
+    <p>
       <ul> 
-  		<li> <a href="">Philosphy</a></li>
+        <search bar></search bar>
+        <li> <a href="">About Messina</a></li>
+        <li> <a href="">Philosphy</a></li>
         <li> <a href="">Privacy Policy</a></li>
         <li> <a href="">Shipping &amp; Returns</a></li>
         <li> <a href="">F.A.Q.s</a></li>
       </ul>
-  </aside>
+    </p>
+  </div>
  <footer>
     <section>
       <ul> 
-  		<li> <a href="">Follow us on Twitter</a></li>
+        <li> <a href="">Follow us on Twitter</a></li>
         <li> <a href="">Like us on Facebook</a></li>
     </section>
     <section>
       <ul>
+         <li> <a href="">About Messina</a></li>
         <li> <a href="">Philosophy</a></li>
         <li> <a href="">Privacy Policy</a></li>
-  		<li> <a href="">Shipping &amp; Returns</a></li>
+                  <li> <a href="">Shipping &amp; Returns</a></li>
         <li> <a href="">F.A.Q.s</a></li>     
       </ul>
     <section>
-    	<li> Contact Us</li>
-    	<li> 800.555.12345</li>
+            <p> Contact Us 800.555.12345</p>
     </section>
     <section>
-    	<logo> Insert photo
+            <logo> Insert photo
     </section>
 </footer>
 
